dimensions modification and credits addition

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Ejercicio de Calculadora</h1>
-    <p>Por Nadia Figueroa</p>
-    <p>Para Latinas CodeCamp</p>
+    <div class="titulo">
+        <h1>Calculator CSS drawing excercise</h1>
+    </div>
+    
     <div class="calculadora">
         <div class="botones">
             <div class="boton1"></div>
@@ -49,6 +50,11 @@
                 <div class="tecla n esq_inf_der">=</div>
             </div>
         </div>
+    </div>
+
+    <div class="creditos">
+        <p>Coded by <a href="https://nadiafigo.github.io/">Nadia Figueroa</a></p>
+        <p>For the Latinas CodeCamp by <a href="https://twitter.com/Technolatinas">Technolatinas</a></p>
     </div>
 </body>
 </html>
